--- a/nginx/Dockerfile
+++ b/nginx/Dockerfile
@@ -1,5 +1,5 @@
-# Set nginx base image
 FROM nginx
-
-# Copy custom configuration file from the current directory
-COPY nginx.conf /etc/nginx/nginx.conf
+COPY ./sites-available/* /etc/nginx/sites-available/
+RUN mkdir /etc/nginx/sites-enabled/
+RUN ln -s /etc/nginx/sites-available/dev.conf /etc/nginx/sites-enabled/dev.conf
+RUN ln -s /etc/nginx/sites-available/int.conf /etc/nginx/sites-enabled/int.conf
