--- a/nginx/Dockerfile
+++ b/nginx/Dockerfile
@@ -1,5 +1,2 @@
 FROM nginx
-COPY ./sites-available/* /etc/nginx/sites-available/
-RUN mkdir /etc/nginx/sites-enabled/
-RUN ln -s /etc/nginx/sites-available/dev.conf /etc/nginx/sites-enabled/dev.conf
-RUN ln -s /etc/nginx/sites-available/int.conf /etc/nginx/sites-enabled/int.conf
+COPY ./sites-available/* /etc/nginx/conf.d/
