--- a/nginx/sites-available/dev.conf
+++ b/nginx/sites-available/dev.conf
@@ -8,4 +8,12 @@ server {
             proxy_set_header Host $host;
             proxy_cache_bypass $http_upgrade;
         }
+        location /int/ {
+                    proxy_pass http://dex2:3000/;
+                    proxy_http_version 1.1;
+                    proxy_set_header Upgrade $http_upgrade;
+                    proxy_set_header Connection 'upgrade';
+                    proxy_set_header Host $host;
+                    proxy_cache_bypass $http_upgrade;
+                }
 }
